Fixed scrollbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  .scrollbar-light::-webkit-scrollbar {
+    width: 8px;
+    /* height: 20px; */
+  }
+
+  .scrollbar-light::-webkit-scrollbar-track {
+    border-radius: 100vh;
+  }
+
+  .scrollbar-light::-webkit-scrollbar-thumb {
+    background: #666666;
+    border-radius: 100vh;
+  }
+}
